Shrink node port range
